<resources>
    <string name="app_name">SimpleEmail</string>
    <string name="time">time</string>
    <string name="sender">sender</string>
    <string name="subject">Subject</string>
    <string name="details">details</string>
    <string name="to_me">to me</string>
    <string name="content">Content</string>
    <string name="primary">PRIMARY</string>
    <string name="mail">Mail</string>
    <string name="Add">New</string>
    <string name="from_me">From: Me</string>
    <string name="send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_reply_this_mail">Please Reply this Mail</string>

</resources>