<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003">


        <TextView
            android:id="@+id/first_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:background="@drawable/side_eclipse"
            android:gravity="center"
            android:text="E"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="266dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">


            <TextView
                android:id="@+id/sender_value"
                android:layout_width="224dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:gravity="top"
                android:text="@string/sender"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subject_value"
                android:layout_width="224dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/subject"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/details_value"
                android:layout_width="270dp"
                android:layout_height="21dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="10"
                android:text="@string/details"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/seperation_line"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>