<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailDetails">

    <LinearLayout
        android:id="@+id/topLL"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/mail_title"
            android:layout_width="383dp"
            android:layout_height="77dp"
            android:layout_marginTop="10dp"
            android:layout_weight="5"
            android:text="Mail Title"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mail_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/topLL">

        <TextView
            android:id="@+id/first_letter"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="2"
            android:background="@drawable/side_eclipse"
            android:gravity="center"
            android:text="E"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sender_value"
                android:layout_width="224dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/sender"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/to_me_title"
                android:layout_width="224dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/to_me"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_value"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/replay_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_replay" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mail_contentRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_details">

        <TextView
            android:id="@+id/mail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>