<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/mail_title"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="5"
            android:layout_marginLeft="10dp"
            android:text="Mail Title"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mail_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/topLL">

        <TextView
            android:id="@+id/first_letter"
            android:layout_width="52dp"
            android:layout_height="55dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="2"
            android:background="@drawable/side_eclipse"
            android:gravity="center"
            android:text="E"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sender_value"
                android:layout_width="224dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/sender"
                android:layout_marginTop="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/to_me_title"
                android:layout_width="224dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/to_me"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/time"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mail_contentRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_details">

        <TextView
            android:id="@+id/mail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ReplayListlayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toTopOf="@+id/ReplayLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_contentRL">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/RvReplays_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ReplayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/BtnReplay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_replay"
            android:background="@color/white">
        </ImageButton>

        <EditText
            android:id="@+id/TVReplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/please_reply_this_mail"
            android:layout_marginLeft="10dp"
            android:textSize="20sp">

        </EditText>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>